--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <li>
     <strong>
-    <a href="https://gabriel-istrate.github.io/publications.html">Publications</a>
+    <a href="https://gabriel-istrate.github.io/papers.html">Publications</a>
     </strong>
     </li>
 
@@ -150,7 +150,11 @@
     <a href="https://gabriel-istrate.github.io/journal-cfps.html">Journal Calls for Papers</a></strong>
     </li>
     </ul>
-
+ <li>
+    <strong>
+    <a href="https://gabriel-istrate.github.io/notebooks.html">Notebooks</a>
+    </strong>
+    </li>
 
 
 
