--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -40,77 +40,99 @@
     <th>Location and Date</th>
   </tr>
   <tr>
-    <td><a href="https://aamas2023.soton.ac.uk/">AAAI</td>
-    <td> Deadline: August 2</td>
-    <td>Singapore, January 20-27 </td>
-  </tr>
-  <tr>
     <td><a href="https://cyprusconferences.org/aamas2026/">AAMAS</td>
     <td>Main Track: October 8 (Abstract: October 1)<p>
         AAAI Track: November 17<p>
         BlueSky Track: December 8 (Abstract: December 3)<p>
-    <td>Cyprus, May 25-29</td>
+    <td>Pafos, Cyprus, May 25-29</td>
   </tr>
   
   
   
   <tr><td><a href="https://2026.ijcai.org/">IJCAI-ECAI</a></td>
-    <td>Jan  (Abstract: Jan )</td>
-    <td>Bremen, Germany, August 8-14, 2026</td></tr>
+    <td>Jan 19 (Abstract: Jan 12)</td>
+    <td>Bremen, Germany, August 15-21, 2026</td></tr>
   
  <tr><td><a href="https://lics.siglog.org/lics26/">LICS</a></td>
     <td>Jan 22 (Abstract: Jan 15)</td>
-    <td>Lisbon, Portugal, July 20-23, 2026</td></tr>
-
-  <tr>
-  <td><a href="https://www.issac-conference.org/2023/">SAT</a></td>
-    <td>Jan (Abstract: Jan ) AOE</td>
-  <td>Lisbon, Portugal, July 18-23, 2026</td></tr>
-  
-  <tr>
-    <td><a href="https://icalp2023.cs.upb.de/cms/">KR</a></td>
-    <td>February 11, 11AM CET</td>
-    <td>Lisbon, Portugal, July 18-23, 2026</td>
-  </tr>
-  <tr>
+   <td>Lisbon, Portugal, July 20-23, 2026</td></tr>
+ <tr>
     <td><a href="https://computationalcomplexity.org/">CCC</a></td>
-    <td>February, AoE</td>
+    <td>February 6, AoE</td>
     <td>Lisbon, Portugal, August 3-6</td>
   </tr>
+
   <tr>
-    <td><a href="http://www.i-cav.org/2023/call-for-papers">CAV</a></td>
-    <td>February, AoE</td>
-    <td>Lisbon, Portugal, July 26-29, 2026</td>
+  <td><a href="https://satisfiability.org/SAT26/">SAT</a></td>
+    <td>February 27 (Abstract: February 20) AOE</td>
+  <td>Lisbon, Portugal, July 20-23, 2026</td></tr>
+  
+  <tr>
+    <td><a href="https://kr.org/KR2026/">KR</a></td>
+    <td>February 13 (Abstract: February 8) AOE </td>
+    <td>Lisbon, Portugal, July 20-23, 2026</td>
+  </tr>
+  
+   <tr>
+    <td><a href="http://ec26.sigecom.org/">EC</a></td>
+    <td>February (?), AoE</td>
+    <td>Rome, Italy, July 6-10</td>
+   </tr>
+   <tr>
+    <td><a href="https://eenps2026.sciencesconf.org/?lang=en">EENPS</a></td>
+    <td>February (?; probably 500 word abstract only)</td>
+    <td>Bucharest,Romania, September 18-19, 2026.</td>
+   </tr>
+   <tr>
+    <td><a href="https://nesy-ai.org/conferences/nesy-2026">NESY</a></td>
+    <td>February (?)</td>
+    <td>Lisbon, September 1-4, 2026.</td>
   </tr>
   <tr>
-    <td><a href="http://ec26.sigecom.org/">EC</a></td>
-    <td>February, AoE</td>
-    <td>Rome, Italy, July 6-10</td>
+    <td><a href="https://automataandacri2026.ugent.be">AUTOMATA & ACRI</a></td>
+    <td>April 3rd (full papers)</td>
+    <td>Ghent, Belgium, July 6-10, 2026</td>
   </tr>
    <tr>
     <td><a href="https://computationalcomplexity.org/">UCNC</a></td>
-    <td></td>
+    <td>May (?) </td>
     <td>Trieste, Italy</td>
    </tr>
     <tr>
-    <td><a href="https://computationalcomplexity.org/">EUMAS</a></td>
-    <td></td>
-    <td>Palermo (?), Italy</td>
+    <td><a href="https://euramas.github.io/eumas2026">EUMAS</a></td>
+    <td>May (?) </td>
+    <td>Malmo, Sweden, September 21-24, 2006.</td>
     </tr>
-    <tr>
-    <td><a href="https://eenps.weebly.com/eenps-2026.html">NESY</a></td>
-    <td></td>
-    <td>Lisbon, September 1-4, 2026.</td>
-  </tr>
-    <tr>
-    <td><a href="https://eenps.weebly.com/eenps-2026.html">EENPS</a></td>
-    <td></td>
-    <td>Bucharest,Romania, September 18-19, 2026.</td>
-  </tr>
+    
  
 </table> 
  
-
+   <h2> 2027 and later</h2>
+  
+   <table>
+  <tr>
+    <th>Conference</th>
+    <th>Deadline</th>
+    <th>Location and Date</th>
+  </tr>
+  
+  <tr>
+    <td><a href="https://cyprusconferences.org/aamas2026/">AAMAS 2027</td>
+    <td> 
+    <td>Vietnam</td>
+  </tr>
+   <tr>
+    <td><a href="https://cyprusconferences.org/aamas2026/">AAMAS 2028</td>
+    <td> 
+    <td>Rotterdam, Netherlands</td>
+   </tr>
+    <tr>
+    <td><a href="https://cyprusconferences.org/aamas2026/">AAMAS 2029</td>
+    <td> 
+    <td>Abu Dhabi, UAE</td>
+  </tr>
+ 
+</table> 
 
   </nav>
 
