--- a/index.html
+++ b/index.html
@@ -71,20 +71,22 @@
     <p>
 
     </p><ul>
-      <li> I am giving a talk this September at the
+      <li> I will serve on the Program Committee of the 
+	<a href="https://www.uni-trier.de/en/universitaet/fachbereiche-faecher/fachbereich-iv/faecher/informatikwissenschaften/professuren/theoretische-informatik/research/conferences-and-workshops/translate-to-englisch-cie-2026">21st Conference on Computability in Europe (CIE'2026) </a> in Trier, Germany. 
+       </li>
+
+      <li> In November 2025 I gave a talk at the <a href="https://diaspora-stiintifica.ro/workshopuri/workshopuri-2025/frontiere-in-inteligenta-artificiala-provocari-si-perspective.html"> AI Workshop,</a> part of the
+	<a href="https://diaspora-stiintifica.ro">Smart Diaspora 2025 Conference</a> in Cluj, Romania. 
+       </li>
+      <li> In September 2025 I gave a talk at the
 	<a href="https://lap.math.hr/LAP2025/">14th Conference on Logic and Applications (LAP 2025) </a> in Dubrovnik, Croatia. 
        </li>
       
-        <li> Our paper <a href="https://arxiv.org/abs/2212.09521"> Mechanism Design With Predictions for Obnoxious Facility Location</a> has been presented at the <a href="https://euramas.github.io/eumas2025/">22nd European Conference on Multiagent Systems (EUMAS 2025)</a>, that took place recently in Bucharest.  
+        <li> In September 2025 I presented our paper <a href="https://arxiv.org/abs/2212.09521"> Mechanism Design With Predictions for Obnoxious Facility Location</a> at the <a href="https://euramas.github.io/eumas2025/">22nd European Conference on Multiagent Systems (EUMAS 2025)</a>.  
 	</li>
 	<li> In August 2025 I gave a talk at the
 	<a href="https://www.dmg.tuwien.ac.at/rsa2025">22nd International Conference on Random Structures and Algorithms (RS&A 2025) </a> in Vienna, Austria. 
        </li>
-      <li> I have given a talk at the <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Continuity, Computability Constructivity: From Logic to Algorithms (CCC'2024)</a> conference in Nice, France. 
-	</li>
-      <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">Working Formal Methods Symposium (FROM'2024)</a>  in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS. 
-       <li> I have published a paper (and given a talk) at the <a href="https://www.stringology.org/event/2024">Prague Stringology Conference 2024</a> in Prague, Czech Republic. The <a href="https://stringology.org/papers/PSC2024.pdf"> conference proceedings </a> (including my paper) are available online.
-	</li>
 	</ul>
     <p></p>
 <h3> Contact info </h3>
