--- a/journal-cfps.html
+++ b/journal-cfps.html
@@ -31,7 +31,7 @@
 
   Mostly for my personal use. <P>
 
-      <h2> 2023 </h2>
+      <h2> 2025-26 </h2>
   
    <table>
   <tr>
@@ -41,20 +41,33 @@
   </tr>
    <tr>
     <td>Journal of Combinatorial Optimization</td>
-    <td>December 1, 2022</td>
-    <td><a href="https://www.euro-online.org/bb/forum/3#/topic/29410">New Challenges in Combinatorial Optimization</a></td>
+    <td>December 1, 2025</td>
+    <td><a href="https://ecco.grenoble-inp.fr/DATA/CfP_ECCO_XXXVIII_2025.pdf">Recent applications, models and algorithms in Combinatorial Optimization</a></td>
+   </tr>
+   <tr>
+    <td>Humanities and Social Science Communications</td>
+    <td>December 31, 2026</td>
+    <td><a href="https://www.nature.com/collections/qtqsgncqqp">Systems thinking rediscovered: a useful approach for science and society</a></td>
+   </tr>
+   <tr>
+    <td>Humanities and Social Science Communications</td>
+    <td>January 26, 2026</td>
+    <td><a href="https://www.nature.com/collections/ffccacbadj">Systems thinking rediscovered: a useful approach for science and society</a></td>
+   </tr>
+    <tr>
+    <td>Humanities and Social Science Communications</td>
+    <td>June 10, 2026</td>
+    <td><a href="https://www.nature.com/collections/aabdfahjif">Critical Simulation Studies</a></td>
   </tr>
   
   <tr>
-    <td>Annals of Operations Research</td>
-    <td>April 15, 2023</td>
-    <td><a href="https://dmuu2022.github.io/">Decision-Making Under Uncertainty: A Multidisciplinary Perspective</a></td>
+    <td>International Journal of Game Theory</td>
+    <td>ongoing</td>
+    <td><a href="https://link.springer.com/collections/jhjdeifbdf?utm_source=rh&utm_medium=rh_collection_recs">Combinatorial Games</a></td>
   </tr>
-  <tr>
-    <td>Studia Logica</td>
-    <td>September 1, 2023</td>
-    <td><a href="https://www.illc.uva.nl/NewsandEvents/Events/Conferences/newsitem/14068/CfP-Studia-Logica-special-issue-on-Information-Sharing-in-Networks-">Information-Sharing in Networks</a></td>
-  </tr>
+ 
+  
+  
  
   
 </table> 
