--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -87,6 +87,11 @@
     <td><a href="https://nesy-ai.org/conferences/nesy-2026">NESY</a></td>
     <td>February (?)</td>
     <td>Lisbon, September 1-4, 2026.</td>
+   </tr>
+    <tr>
+    <td><a href="https://easychair.org/cfp/DLT-2026">DLT</a></td>
+    <td>March 6</td>
+    <td>Rouen, France, June 30 - July 3, 2026.</td>
   </tr>
   <tr>
     <td><a href="https://automataandacri2026.ugent.be">AUTOMATA & ACRI</a></td>
@@ -94,9 +99,19 @@
     <td>Ghent, Belgium, July 6-10, 2026</td>
   </tr>
    <tr>
-    <td><a href="https://computationalcomplexity.org/">UCNC</a></td>
+    <td><a href="https://dlt-ncma-2026.sciencesconf.org/">NCMA</a></td>
+    <td>April 6</td>
+    <td>Rouen, France, June 30 - July 3, 2026.</td>
+  </tr>
+   <tr>
+    <td><a href="">UCNC</a></td>
     <td>May (?) </td>
     <td>Trieste, Italy</td>
+   </tr>
+    <tr>
+    <td><a href="">SAGT</a></td>
+    <td>May (?) </td>
+    <td>September (?), Augsburg, Germany</td>
    </tr>
     <tr>
     <td><a href="https://euramas.github.io/eumas2026">EUMAS</a></td>
