--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -75,7 +75,7 @@
   
    <tr>
     <td><a href="http://ec26.sigecom.org/">EC</a></td>
-    <td>February (?), AoE</td>
+    <td>February 9, (Abstract: February 2)</td>
     <td>Rome, Italy, July 6-10</td>
    </tr>
    <tr>
