--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -58,7 +58,7 @@
    <td>Lisbon, Portugal, July 20-23, 2026</td></tr>
  <tr>
     <td><a href="https://computationalcomplexity.org/">CCC</a></td>
-    <td>February 6, AoE</td>
+    <td>February 6</td>
     <td>Lisbon, Portugal, August 3-6</td>
   </tr>
 
@@ -67,7 +67,7 @@
   
    <tr>
     <td><a href="http://ec26.sigecom.org/">EC</a></td>
-    <td>February 9, (Abstract: February 2)</td>
+    <td>February 9 (Abstract: February 2)</td>
     <td>Rome, Italy, July 6-10</td>
    </tr>
    <tr>
