--- a/media.html
+++ b/media.html
@@ -37,9 +37,17 @@
     </p>
     Some of the conference presentations/media appearances, recorded here for posterity :-)
     <h2 style = "color:#008080" > Scientific Presentations </text></h2>
-    <h4> 2022 </h4>
+
+<h4> 2025 </h4>
     <ul>	<li>
-	<a href="https://youtu.be/E6Oumvh7HdY">Mechanism Design with Predictions for Obnoxious Facility Location</a>, presentation at Purdue Theory Seminar, November 30,2022. <a href="">manuscript.</a> 
+	<a href="https://www.youtube.com/watch?v=7PVYCMjnTrQ&t=4570s">Algoritmi cu Predictii in Sisteme Multiagent</a> (Algorithms with Predictions in Multiagent Systems), presentation (in Romanian) at the A.I. Workshop, <a href=""> Diaspora Stiintifica Conference 2025,</a> Cluj, Romania, November 2025. <b>My talk starts at 1:16h.</b>   
+      </li>
+      </ul>
+
+
+<h4> 2022 </h4>
+    <ul>	<li>
+	<a href="https://youtu.be/E6Oumvh7HdY">Mechanism Design with Predictions for Obnoxious Facility Location</a>, presentation at Purdue Theory Seminar, November 30,2022. The paper has been published in the proceedings of EUMAS 2025. <p>
 	</li>
       	<li>
 	<a href="https://youtu.be/_DsDjMqtcpw">Being Central on the Cheap: Stability in Heterogeneous Multiagent Centrality Games</a>, presentation at AAMAS'22, May 2022. <a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p651.pdf">paper.</a> 
