--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
        </li>
 
       <li> In November 2025 I gave a talk at the <a href="https://diaspora-stiintifica.ro/workshopuri/workshopuri-2025/frontiere-in-inteligenta-artificiala-provocari-si-perspective.html"> AI Workshop,</a> part of the
-	<a href="https://diaspora-stiintifica.ro">Smart Diaspora 2025 Conference</a> in Cluj, Romania. 
+	<a href="https://diaspora-stiintifica.ro">Smart Diaspora 2025 Conference</a> in Cluj, Romania. <B> The presentation (in Romanian) <a href="https://www.youtube.com/watch?v=7PVYCMjnTrQ&t=4570s"> is available on Youtube</a> (I start at 1:16h) </B> 
        </li>
       <li> In September 2025 I gave a talk at the
 	<a href="https://lap.math.hr/LAP2025/">14th Conference on Logic and Applications (LAP 2025) </a> in Dubrovnik, Croatia. 
