--- a/journal-cfps.html
+++ b/journal-cfps.html
@@ -47,7 +47,7 @@
    <tr>
     <td>Humanities and Social Science Communications</td>
     <td>December 31, 2026</td>
-    <td><a href="https://www.nature.com/collections/qtqsgncqqp">Systems thinking rediscovered: a useful approach for science and society</a></td>
+    <td><a href="https://www.nature.com/collections/dajgjhbcfg">Transdisciplinary research for transformative change: from conceptual insights to societal impact</a></td>
    </tr>
    <tr>
     <td>Humanities and Social Science Communications</td>
