--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <p>
 
     </p><ul>
+      <li> My paper (with Cosmin Bonchis and Victor Bogdan) <a href="https://arxiv.org/abs/2507.12486">On multiagent online problems with predictions </a> has been accepted (as an extended abstract) to <a href="https://cyprusconferences.org/aamas2026/">AAMAS 2026.</a> 
       <li> I will serve on the Program Committee of the 
 	<a href="https://www.uni-trier.de/en/universitaet/fachbereiche-faecher/fachbereich-iv/faecher/informatikwissenschaften/professuren/theoretische-informatik/research/conferences-and-workshops/translate-to-englisch-cie-2026">21st Conference on Computability in Europe (CIE'2026) </a> in Trier, Germany. 
        </li>
