--- a/papers.html
+++ b/papers.html
@@ -1172,13 +1172,13 @@
         },
 	{
                 id: 48,
-                title: "On Multiagent Online Problems with Prediction",
+                title: "On Multiagent Online Problems with Predictions",
                 authors: "Gabriel Istrate, Cosmin Bonchis, Victor Bogdan",
-                year: 2025,
-                type: "Technical Report",
+                year: 2026,
+                type: "Conference Paper",
                 topic: "Algorithms with Predictions",
-            venue: "arXiv.org ",
-	    pubvenue: "TR: arXiv", 
+            venue: "Proceedings of AAMAS'2026 (to appear)",
+	    pubvenue: "Conferences: AAMAS", 
                 volume: "arXiv:2507.12486",
                 isTop10: true,
         abstract: "",
